Fixing positioning
Adding bootstrap messed up some positioning. Changed that here.

--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ html{
 #kalyn-border {
   border: 5px dotted #033270;
   position:absolute;
-  top: 215px;
+  top: 275px;
   left: 520px;
   height: 1000px;
   width: auto;
